# digital-games-piracy-data

./: .gitignore  LICENSE.md  README.md  crackwatcher_scrap.py  environ.py  missing_appids.py  output.csv  pc_gaming_wiki_api.py  pc_gaming_wiki_api_manual.py  pc_gaming_wiki_api_update.py  pc_gaming_wiki_api_update_denuvo.py  pc_gaming_wiki_scrap.py  pyproject.toml  raw_data_dataflow_template.py  raw_data_dataflow_test.py  reddit_api.py  steam_appid_api.py  steam_charts_api.py  steam_cracks_scrap.py
mongodb_local_dump/dump/admin/: system.version.metadata.json
mongodb_local_dump/dump/jogos_digitais/: cracks.bson  cracks.metadata.json  game_details.metadata.json  steam_appid.metadata.json
scripts/: data_class.py  main.py  missing_appids.py  pc_gaming_wiki_api_manual.py  pc_gaming_wiki_api_update.py  pc_gaming_wiki_scrap.py  scrapper.py  steam_appid_api.py  steam_charts_api.py  steam_cracks_scrap.py  util.py
scripts/dataflow_transformations/: raw_data_dataflow_template.py
tests/: raw_data_dataflow_test.py
